--- a/src/components/searchBox/searchBox.css
+++ b/src/components/searchBox/searchBox.css
@@ -5,6 +5,23 @@
 
 }
 
+.searchBox input,
+button {
+  border: 1px solid gray;
+  padding: 10px;
+  background-color: lightgray;
+  font-size: 16px;
+  outline: none;
+}
+
+.searchBox input:focus {
+  border:1px solid #FFE300;
+}
+
+.searchBox button:hover {
+  background-color: rgb(158, 154, 154);
+}
+
 @media (min-width:768px) {
   .searchBox {
     width: calc(50%);
