add there is no result p tag

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,6 +12,15 @@
     flex-wrap: wrap;
 
 }
-.boxes{
+
+.boxes {
     margin-bottom: 20px;
+}
+
+.message {
+    font-size: 20px;
+    margin-top: 20px;
+    background-color: lightgray;
+    padding: 10px;
+    border-radius: 10px;
 }
